--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "print-tree",
   "version": "1.0.0",
   "description": "",
-  "main": "bin/index.js",
-  "bin": "bin/index.js",
+  "main": "bin/table.js",
+  "bin": {
+    "print-tree": "./bin/tree.js",
+    "print-table": "./bin/table.js"
+  },
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "arg": "^5.0.2",
-    "chalk": "^5.2.0"
+    "chalk": "^5.2.0",
+    "table": "^6.8.1"
   }
 }
